--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.10.0",
     "react-chrono": "^1.13.1",
     "react-dom": "^17.0.2",
+    "react-flip-numbers": "^3.0.8",
     "react-icons": "^4.7.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.2.1",
