--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@lottiefiles/lottie-player": "^1.5.4",
     "@mui/lab": "^5.0.0-alpha.73",
     "@mui/material": "^5.5.1",
+    "@vitejs/plugin-react": "^4.3.4",
     "bootstrap": "^5.3.2",
     "firebase": "^9.6.3",
     "install": "^0.13.0",
@@ -27,11 +28,11 @@
     "react-scripts": "^5.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview"
+}
+,
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -53,6 +54,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.13"
+    "tailwindcss": "^3.0.13",
+    "vite": "^6.0.11"
   }
 }
